# Projects

./: README.md  ReadMe.txt
Capston/: main.tf
Project 5/: README.md  readme.md
Project 5/auth_api/: Dockerfile  auth_service.py
Project 5/catalog_api/: catalog.py
Project1/: README.md  instal_java.yaml
Project1 - Linux Servers on AWS/: Create_AWS_Shell.sh  text.txt
Project2-Infrastructure Provisioning Automation/: main.tf  terraform.tfstate  terraform.tfvars  variables.tf
Project3/: README.md  Readme.txt
Project3-Containerize Apps/: Dockerfile  README.md  my-web-app.py
Project4/: Dockerfile-auth  Dockerfile-catalog  auth_service.py  catalog_service.py  docker-compose.yaml  readme.md
Project4-Docker_ Compose/: docker-compose.yaml  readme.md
Project4-Docker_ Compose/auth_api/: Dockerfile
Project4/auth_api/: auth_service.py
Project4/catalog_api/: Dockerfile  catalog.py
Project5-API’s and Databases/: README.md  docker-compose.yaml
Project5-API’s and Databases/catalog_api/: Dockerfile
project2/: ReadMe.md  install_nginx.yml  main.tf  terraform.tfstate  terraform.tfstate.backup
project3/: Readme.docx
project6-fastapi/: Dockerfile  LICENSE  README.Docker.md  README.md  deployment.yaml  devbox.json  pyproject.toml
project6-fastapi/src/app/: __init__.py  main.py
