[project]
name = "fastapi-demo"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "nhat416", email = "nhat.tran416@icloud.com" }
]
dependencies = [
    "fastapi>=0.110.0",
    "requests>=2.31.0",
    "uvicorn>=0.29.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/fastapi_demo"]
